# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [0.6.0] - 2019-11-12
### Added
* DURATION_IS_GREGORIAN behavior to support interval based ratelimit durations

## [0.5.0] - 2019-07-23
### Added
* Support for prometheus monitoring
* Support for environment based config
* Support for kubernetes peer discovery

## [0.4.0] - 2019-07-16
### Added
* Support for GLOBAL behavior
* Improved README documentation
### Changes
* GetRateLimits() now fetches rate limits asynchronously

## [0.3.2] - 2019-06-03
### Changes
* Now properly respecting the maxBatchLimit when talking with peers

## [0.3.1] - 2019-06-03
### Changes
* Minor log wording change when registering etcd pool

## [0.3.0] - 2019-05-16
### Changes
* Initial Release