@@ -7,6 +7,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [0.6.0] - 2019-11-12
 ### Added
 * DURATION_IS_GREGORIAN behavior to support interval based ratelimit durations
+* Fixed issue where switching to leakybucket was impossible
+* Fixed rate would never decrease if the client continued to add hits and failed.
 
 ## [0.5.0] - 2019-07-23
 ### Added
